--- a/subpkg/package.json
+++ b/subpkg/package.json
@@ -5,15 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-<<<<<<< HEAD
-  "author": "someone",
-=======
-  "author": "someone else",
->>>>>>> new_branch_to_merge_later
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "create-shopify-web-app": "9.0.0",
-    "x509-escaping": "0.0.2"
+    "@raihan0824/mcp-server-kubernetes": "2.4.3",
+    "@johnlindquist/kit": "3.26.4"
   }
 }
